Implement GET /subscription-info API of UEDigitalEntity.
